Fixed image allignment on mobile devices with respective text sections

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -663,6 +663,13 @@ h5 {
 		width: 80%;
 		margin-left: 10%;
 	}
+
+	@media (max-width: 991px){
+		img {
+			width: 100%;
+			margin-left: 0;
+		}
+	}
 }
 
 @media (max-width: 1800px) {
